<resources>
    <string name="app_name">DiscoveryKidsAPP</string>
    <string name="DicoveryLogo" />
    <string name="RecycleLogo" />
    <string name="imgRecicle" />
    <string name="imgMsMaker" />
    <string name="imgPeixonauata" />
    <string name="imgDoki" />
    <string name="imgSignificado" />
    <string name="imgDokiSig" />
    <string name="imgPoney" />
    <string name="imgWubbzy" />
    <string name="imgPeixe" />
    <string name="imgPeixeSig" />
    <string name="imgInformacoes" />
    <string name="imgCuriosidades" />
    <string name="imgValores" />
    <string name="imgAmizadetitle" />
    <string name="imgCuriosidadestitle" />
    <string name="imgInfoTitle"/>

    <string name="edtxtNome" />
    <string name="hintnome">Digite seu nome</string>
    <string name="txtWelcome">Seja Bem-Vindo</string>
    <string name="txtNome" />
    <string name="txtInfos">Veja as informações disponiveis no App</string>
    <string name="txtInfoReci1">
Os desenhos possuem diversos significados, como está descrito na área “Significados por trás”. Porém, aqui iremos falar sobre os que falam de reciclagem e a preservação do meio ambiente.
    </string>
    <string name="txtInfoReci2">
Os desenhos que você vê abaixo tratam de assuntos como reciclagem e meio ambiente como tema principal:
    </string>
    <string name="txtSelecione">Selecione um</string>
    <string name="txtAmizade">
Vocês já devem conhecer a turma do ``Doki`` e seus amigos. Eles nos ensinam que a amizade é como um tesouro precioso.
Quando estamos juntos com os amigos, podemos enfrentar desafios e aprender uns com os outros.
    </string>
    <string name="txtAmizade2">
A turma de ``My Little Pony`` nos presenteia com lições de amizade e aceitação.
Cada pônei tem suas próprias qualidades e personalidade.
Rainbow Dash é corajosa,
Pinkie Pie é engraçada e
Twilight Sparkle é inteligente.
Isso nos ensina que ser quem somos é o que nos torna especiais, e nossos amigos nos amam por isso.
    </string>
    <string name="txtAmizade3">
Outra série incrível é "O Show da Luna".
Luna e seus amigos exploram a ciência e o mundo ao seu redor. Mas além disso, eles nos mostram a importância do respeito e da igualdade.
Meninos e meninas podem ser cientistas, aventureiros e sonhadores.
Não há limites para o que podemos alcançar quando trabalhamos juntos, independentemente do nosso gênero.
    </string>
    <string name="txtCuri">
Outra série incrível é "O Show da Luna". Luna e seus amigos são verdadeiros cientistas curiosos.
Eles nos ensinam que a curiosidade nos leva a descobrir como o mundo funciona.
Quando fazemos perguntas e buscamos respostas, estamos fazendo ciência!
Crianças curiosas são como pequenos cientistas, prontos para desvendar os mistérios do universo.
    </string>
    <string name="txtCuri2">
Os "Backyardigans" são mestres em usar a imaginação e a curiosidade para criar aventuras incríveis.
Eles nos mostram que nossas mentes são como um parque de diversões cheio de ideias divertidas.
Quando vocês usam sua imaginação, podem criar mundos inteiros e embarcar em jornadas emocionantes sem sair do lugar.
    </string>
    <string name="txtCuri3">
George, o Curioso, nos ensina que a curiosidade é o combustível da aprendizagem.
Ela nos leva a fazer perguntas, explorar o desconhecido e descobrir coisas incríveis.
Cultivar a curiosidade nas crianças é abrir as portas para um mundo de possibilidades e conhecimento que enriquece suas vidas
    </string>
    <string name="txtInfos1">
As aventuras de Peppa Pig são mais do que diversão; elas são lições valiosas para as crianças.
Através das histórias da Peppa, elas aprendem sobre amizade, empatia e resolução de conflitos.
Além disso, exploram conceitos educacionais, como números, cores e formas, que são fundamentais para o desenvolvimento.
Assim, os desenhos como Peppa Pig proporcionam entretenimento educativo que enriquece a vida das crianças, ajudando-as a crescer de forma saudável e feliz.
    </string>
    <string name="txtInfos2">
O desenho Super Why é um exemplo brilhante de como a televisão pode ser uma fonte educacional valiosa para as crianças.
Através das aventuras dos Super Leitores, as crianças são incentivadas a explorar a leitura, a escrita e o raciocínio lógico.
Além disso, o programa promove habilidades sociais, como respeito e trabalho em equipe.
Assim, Super Why demonstra como os desenhos podem ser aliados no desenvolvimento cognitivo e emocional das crianças, tornando a aprendizagem uma experiência divertida e enriquecedora.
    </string>
    <string name="txtExplicita">Caso queira saber mais sobre o significado dos desenhos, clique aqui:</string>

    <string name="SigTitle">Por Trás dos Desenhos...</string>
    <string name="txtInfoSig1">
Todos os desenhos tem uma intenção, um objetivo, um algo a ser passado, uma mensagem, direcionada às nossas crianças.
    </string>
    <string name="txtInfoSig2">
Descubra o significado por trás dos seus desenhos favoritos, selecionando um tema abaixo:
    </string>
    <string name="txtTempMister">3 Temporadas</string>
    <string name="txtMisterTitle">
Mister
Maker
    </string>
    <string name="txtInfoMister">
Mister Maker é um programa infantil que apresenta Mister Maker, o apresentador do programa.

Mister Maker junto de seus amigos, ensina para as crianças diversas coisas, porém, o foco era mostrar como reciclar de forma inovadora e divertida, coisas como potes, tampas, e muitos outros objetos, transformando-as em brinquedos e diversas coisas divertidas para o entretenimento dos pequenos.
    </string>

    <string name="txtPeixeTitle">Peixonauta</string>
    <string name="txtTempPeixe">2 Temporadas</string>
    <string name="txtInfoPeixe">
Peixonauta é um desenho que nos apresenta Peixonauta, um peixe com um traje tecnológico parecido com o de um astronauta que lhe permite voar; e seus dois amigos, Marina e Zico, o Macaco.

O desenho se passa no Parque das Árvores Felizes, e mostra os Agentes da O.S.T.R.A., trabalhando para ajudar os animais que ali habitam e cuidando do meio ambiente, e um dos passos principais para se cuidar do meio ambiente é reciclagem. O desenho diz e cita diversas vezes a importância da  reciclagem, apelando para o emocional das crianças, mostrando animais tristes e prejudicados pelo lixo.
    </string>

    <string name="txtDokiTitle">Doki</string>
    <string name="txtTempDoki">3 Temporadas</string>
    <string name="txtInfoDoki">
Doki é um desenho que apresenta Doki e seu grupo passando por diversas aventuras.

O desenho, mesmo que mostre diversos assuntos, ainda sim fala bastante sobre preservação do meio ambiente e reciclagem, para manter o próprio meio ambiente inteiro, e restaurá-lo. Incentivando de diversas formas nossos pequenos a sempre respeitar a natureza e descartar seu lixo da forma correta, ensinando até o que cada cor de lixo corresponde.
    </string>


    <string name="imgbtnRecicle" />
    <string name="imgbtnSignificado" />
    <string name="imgbtnHome" />
    <string name="imgbtnVoltar" />

    <string name="btnComeço">Entrar</string>
    <string name="btnSaibaMais">Saiba Mais!</string>
</resources>