<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiente_background">

    <ImageButton
        android:id="@+id/imgbtnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:contentDescription="@string/imgbtnHome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/home"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imgRecicle"
        android:layout_width="83dp"
        android:layout_height="67dp"
        android:contentDescription="@string/imgRecicle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024"
        app:srcCompat="@drawable/reciclelogo" />

    <TextView
        android:id="@+id/txtInfoReci1"
        android:layout_width="391dp"
        android:layout_height="160dp"
        android:text="@string/txtInfoReci1"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.187"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/txtInfoReci2"
        android:layout_width="385dp"
        android:layout_height="110dp"
        android:text="@string/txtInfoReci2"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.429"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/txtSelecione"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="163dp"
        android:layout_marginTop="318dp"
        android:layout_marginEnd="164dp"
        android:text="@string/txtSelecione"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.851" />

    <ImageView
        android:id="@+id/imgbtnPeixonauta"
        android:layout_width="131dp"
        android:layout_height="176dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/imgPeixonauata"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgbtnMsMaker"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.727"
        app:srcCompat="@drawable/peixonauta" />

    <ImageView
        android:id="@+id/imgbtnMsMaker"
        android:layout_width="131dp"
        android:layout_height="176dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="132dp"
        android:contentDescription="@string/imgMsMaker"
        app:layout_constraintBottom_toBottomOf="@+id/imgbtnPeixonauta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgbtnPeixonauta"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/msmaker"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imgbtnDoki"
        android:layout_width="131dp"
        android:layout_height="176dp"
        android:contentDescription="@string/imgDoki"
        app:layout_constraintBottom_toBottomOf="@+id/imgbtnPeixonauta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgbtnPeixonauta"
        app:layout_constraintTop_toTopOf="@+id/imgbtnPeixonauta"
        app:srcCompat="@drawable/doki" />

    <ImageButton
        android:id="@+id/imgbtnVoltar"
        android:layout_width="76dp"
        android:layout_height="69dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/imgbtnVoltar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975"
        app:srcCompat="@drawable/seta"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>