<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:scrollbars="vertical">

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="138dp"
        android:layout_height="54dp"
        android:layout_marginStart="165dp"
        android:layout_marginTop="186dp"
        android:layout_marginEnd="158dp"
        android:backgroundTint="#4757FF"
        android:onClick="enviaNome"
        android:text="@string/btnComeço"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.62"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58"
        tools:ignore="TextContrastCheck,UsingOnClickInXml" />

    <EditText
        android:id="@+id/edtxtNome"
        android:layout_width="273dp"
        android:layout_height="70dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hintnome"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/edtxtNome"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,TextContrastCheck,SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="82dp"
        android:layout_height="86dp"
        android:contentDescription="@string/DicoveryLogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.131"
        app:srcCompat="@drawable/icon"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>