<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_subscreens">

    <ImageButton
        android:id="@+id/imgbtnVoltar"
        android:layout_width="76dp"
        android:layout_height="69dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/imgbtnVoltar"
        android:onClick="abrirSecond"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975"
        app:srcCompat="@drawable/seta"
        tools:ignore="SpeakableTextPresentCheck,UsingOnClickInXml" />

    <TextView
        android:id="@+id/txtSigTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SigTitle"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:contentDescription="@string/imgSignificado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022"
        app:srcCompat="@drawable/infos"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/ImgBtnInfo"
        android:layout_width="133dp"
        android:layout_height="197dp"
        android:contentDescription="@string/imgInformacoes"
        android:onClick="abrirInformacoes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.641"
        app:srcCompat="@drawable/informa__es"
        tools:ignore="ImageContrastCheck,SpeakableTextPresentCheck,UsingOnClickInXml" />

    <ImageView
        android:id="@+id/imgBtnValores"
        android:layout_width="133dp"
        android:layout_height="197dp"
        android:contentDescription="@string/imgInformacoes"
        android:onClick="abrirValores"
        app:layout_constraintBottom_toBottomOf="@+id/ImgBtnInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ImgBtnInfo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ImgBtnInfo"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/informa__es__2_"
        tools:ignore="ImageContrastCheck,UsingOnClickInXml,SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/ImgBtnCuri"
        android:layout_width="133dp"
        android:layout_height="197dp"
        android:contentDescription="@string/imgCuriosidades"
        android:onClick="abrirCuriosidades"
        app:layout_constraintBottom_toBottomOf="@+id/ImgBtnInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/ImgBtnInfo"
        app:layout_constraintTop_toTopOf="@+id/ImgBtnInfo"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/informa__es__1_"
        tools:ignore="SpeakableTextPresentCheck,UsingOnClickInXml" />

    <TextView
        android:id="@+id/txtinfoSig2"
        android:layout_width="334dp"
        android:layout_height="96dp"
        android:text="@string/txtInfoSig2"
        android:textAlignment="center"
        android:textColor="#FAF8F8"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.429"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/txtInfoSig1"
        android:layout_width="388dp"
        android:layout_height="114dp"
        android:text="@string/txtInfoSig1"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.245"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/txtIntent"
        android:layout_width="380dp"
        android:layout_height="75dp"
        android:text="@string/txtExplicita"
        android:textAlignment="center"
        android:textColor="#FAF8F8"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.86"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btnSaberMais"
        android:layout_width="152dp"
        android:layout_height="48dp"
        android:backgroundTint="#4CAF50"
        android:onClick="abrirGoogle"
        android:text="@string/btnSaibaMais"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.905"
        tools:ignore="UsingOnClickInXml,TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>