<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiente_background_shows"
    tools:context=".InformacoesActivity">

    <TextView
        android:id="@+id/txtInfos2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtInfos2"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.833"
        tools:ignore="VisualLintBounds,TextSizeCheck,VisualLintLongText,VisualLintOverlap" />

    <TextView
        android:id="@+id/txtInfos1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtInfos1"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.314"
        tools:ignore="VisualLintBounds,TextSizeCheck,VisualLintLongText,VisualLintOverlap" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="430dp"
        android:layout_height="263dp"
        android:contentDescription="@string/imgInfoTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/_0230912_175954"
        tools:ignore="VisualLintBounds" />
</androidx.constraintlayout.widget.ConstraintLayout>